--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/_AddEvent.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Event/_AddEvent.cshtml
@@ -21,7 +21,7 @@
 				{
 					<h5 class="modal-title">Add Event</h5>
 				}
-
+				<p><span class="red-txt">*</span> denotes a required field</p>
 				@Html.ValidationSummary(true)
 
 				<div class="row">
