--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ClassesConfirm.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/EventRegistration/ClassesConfirm.cshtml
@@ -1,28 +1,11 @@
 ﻿@model IEnumerable<Chinmaya.Registration.Models.ClassesConfirmModel>
 @{
-	Layout = "~/Views/Shared/_Layout.cshtml";
+	Layout = "~/Views/Shared/_LayoutForProgramEventRegistration.cshtml";
 	ViewBag.Title = "ClassesConfirm";
 }
 @Html.Raw(TempData["msg"])
 <button class="navbar-toggler aside-toggle" aria-expanded="false" aria-controls="menu-content" aria-label="Toggle navigation" type="button" data-target="#menu-content" data-toggle="collapse"> <span class="navbar-toggler-icon"></span> </button>
-	<div class="nav-side-menu">
-
-		<div class="menu-list">
-
-			<ul class="menu-content collapse out classes-list" id="menu-content">
-				<li>
-					<a href="javascript: void(0);"> About Balavihar Classes </a>
-				</li>
-				<li>
-					<a href="javascript: void(0);"> Link 2 </a>
-				</li>
-				<li>
-					<a href="javascript: void(0);"> Link 3 </a>
-				</li>
-
-			</ul>
-		</div>
-	</div>
+	
 	<div class="bd-content">
 		<div class="row">
 			<div class="col-md-9">
