--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/FamilyMember/_AddFamilyMember.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/FamilyMember/_AddFamilyMember.cshtml
@@ -20,6 +20,7 @@
 		{
 				<h5 class="modal-title">Add Family Member</h5>
 		}
+				<p><span class="red-txt">*</span> denotes a required field</p>
 		@Html.ValidationSummary(true)
 		<div class="row">
 			@Html.HiddenFor(m => m.Id, new { id = "fmID" })
