--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/NotFound.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/NotFound.cshtml
@@ -1,5 +1,10 @@
-@{
-    Layout = "~/Views/Shared/_LayoutPageRegister.cshtml";
+@if (Chinmaya.Registration.UI.Providers.SessionVar.LoginUser != null)
+{
+	Layout = "~/Views/Shared/_LayoutPageRegister.cshtml";
+}
+else
+{
+	Layout = null;
 }
 
 <h5>Page Not Found</h5>
