--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/FamilyMember/_AddFamilyMember.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/FamilyMember/_AddFamilyMember.cshtml
@@ -83,14 +83,14 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12">
-				<button class="btn btn-secondary float-left mr-3" id="btnCancel" type="button" data-dismiss="modal" name="prevBtn">Cancel <i class="material-icons">cancel</i></button>
+				<button class="btn btn-secondary float-left mr-3" id="btnCancel" type="button" data-dismiss="modal">Cancel <i class="material-icons">cancel</i></button>
 				@if (!string.IsNullOrEmpty(Model.Id))
 				{
-					<button class="btn btn-orange" id="btnsubmit" type="submit" data-target="#demo" data-toggle="collapse" name="nextBtn">Update <i class="material-icons">check_circle</i></button>
+					<button class="btn btn-orange" id="btnsubmit" type="submit" data-target="#demo" data-toggle="collapse">Update <i class="material-icons">check_circle</i></button>
 				}
 				else
 				{
-					<button class="btn btn-orange" id="btnsubmit" type="submit" data-target="#demo" data-toggle="collapse" name="nextBtn">Submit <i class="material-icons">check_circle</i></button>
+					<button class="btn btn-orange" id="btnsubmit" type="submit" data-target="#demo" data-toggle="collapse">Submit <i class="material-icons">check_circle</i></button>
 				}
 			</div>
 		</div>
@@ -148,16 +148,11 @@
 	function OnSuccess(response) {
 		if (typeof (response.Message) !== 'undefined') {
 			if (response.IsSuccess) {
-				toastr.success(response.Message, "Add Family Member", { timeOut: 3000 });
-				setTimeout(function () {
-					window.location.reload();
-				}, 2000);
+				toastr.success(response.Message, { timeOut: 3000 });
 				return;
 			}
-			toastr.error(response.Message, "Add Family Member");
+			toastr.error(response.Message);
 		}
-		$("#btnsubmit").prop("disabled", false);
-		$("#btnCancel").prop("disabled", false);
 	}
 
 	function OnBegin() { 
@@ -184,9 +179,7 @@
 				$("#Err_Grade").hide();
 				return true;
 			}
-		}
-	    $("#btnsubmit").prop("disabled", true);
-		$("#btnCancel").prop("disabled", true);
+		};
 	}
 </script>
 
