AdminIndex view changed. Added button to convert multiple individual accounts to family accounts. Checkbox placed at starting of row

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Account/MyAccount.cshtml
@@ -83,7 +83,7 @@
 
 <script>
 	$(document).ready(function () {
-
+		$('[data-toggle="tooltip"]').tooltip();
 		$("#AddFamilyMember").on("click", function () {
 			$("#exampleModalCenter").load("/FamilyMember/RefreshFamilyMemberPartialView");
 			$("#exampleModalCenter").modal();
