Added links for Home, AboutUs, Donate, ContactUs, Facebook and BalaVihar

--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 					<select class="drpdown">
 						<option>Our Other Sites</option>
 					</select>
-					<a class="fab fa-facebook-f" href="javascript: void(0);"></a>
+					<a target="_blank" rel="noopener noreferrer" class="fab fa-facebook-f" href="https://www.facebook.com/Chinmayamissionchicago/"></a>
 					<a class="fab fa-twitter" href="javascript: void(0);"></a>
 					<a class="fab fa-google-plus-g" href="javascript: void(0);"></a>
 					<a class="fab fa-linkedin-in" href="javascript: void(0);"></a>
