--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutForProgramEventRegistration.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_LayoutForProgramEventRegistration.cshtml
@@ -34,7 +34,7 @@
 		<div class="nav-side-menu">
 			<div class="menu-list">
 				<ul class="menu-content collapse out classes-list" id="menu-content">
-					<li><a href="javascript: void(0);"> About Balavihar Classes </a></li>
+					<li><a target="_blank" rel="noopener noreferrer" href="http://mychinmaya.org/balavihar/"> About Balavihar Classes </a></li>
 					<li><a href="javascript: void(0);"> Link 2 </a></li>
 					<li><a href="javascript: void(0);"> Link 3 </a></li>
 				</ul>
