--- a/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_MainMenu.cshtml
+++ b/Chinmaya.Registration/Chinmaya.Registration.UI/Views/Shared/_MainMenu.cshtml
@@ -8,15 +8,15 @@
 					{
 						if (@item == "Home")
 						{
-							<li class="nav-item"> <a class="nav-link" href="javascript: void(0);">Home<span class="sr-only">(current)</span></a> </li>
+							<li class="nav-item"> <a target="_blank" rel="noopener noreferrer" class="nav-link" href="http://mychinmaya.org/">Home<span class="sr-only">(current)</span></a> </li>
 						}
 						if (@item == "About Us")
 						{
-							<li class="nav-item"> <a class="nav-link" href="javascript: void(0);">About Us</a> </li>
+							<li class="nav-item"> <a target="_blank" rel="noopener noreferrer" class="nav-link" href="http://mychinmaya.org/?id=aboutus">About Us</a> </li>
 						}
 						if (@item == "Donate")
 						{
-							<li class="nav-item"> <a class="nav-link" href="javascript: void(0);">Donate</a> </li>
+							<li class="nav-item"> <a target="_blank" rel="noopener noreferrer" class="nav-link" href="https://www.mychinmaya.org/apps/donate.cfm">Donate</a> </li>
 						}
 						if (@item == "Program/Event Registration")
 						{
@@ -32,7 +32,7 @@
 						}
 						if (@item == "Contact Us")
 						{
-							<li class="nav-item"> <a class="nav-link" href="javascript: void(0);">Contact Us</a> </li>
+							<li class="nav-item"> <a target="_blank" rel="noopener noreferrer" class="nav-link" href="http://mychinmaya.org/?id=contactus">Contact Us</a> </li>
 						}
 					}
 				</ul>
